syntax = "proto3";

package raw;

option go_package = "github.com/maxogod/distro-tp/src/common/models/raw";

message Transaction {
    string transaction_id = 1;
    string store_id = 2;
    string user_id = 3;
    double final_amount = 4;
    string created_at = 5;
}

message TransactionBatch {
    repeated Transaction transactions = 1;
}